tests/snapshots/examples_fixtures/flow__base_directives_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/flow/base_directives_ok.flx
== compile ==
failed (compile)
== diagnostics ==
error[E013]: Module Not Imported

Module `Flow` is not imported.

  examples/flow/base_directives_ok.flx:8:1
  |
8 | Flow.print("len(xs) = " + to_string(len(xs)));
  | ^^^^^^^^^^

Hint:
  Add an import statement at the top of your file: `import Flow`. You can also use an alias: `import {} as ShorterName`. Remember: imports must be at the top, before any other code.


error[E013]: Module Not Imported

Module `Flow` is not imported.

  examples/flow/base_directives_ok.flx:9:1
  |
9 | Flow.print("first(xs) = " + to_string(first(xs)));
  | ^^^^^^^^^^

Hint:
  Add an import statement at the top of your file: `import Flow`. You can also use an alias: `import {} as ShorterName`. Remember: imports must be at the top, before any other code.

Found 2 errors.
== stdout ==
<not executed>
